--- a/style.css
+++ b/style.css
@@ -1,18 +1,90 @@
 @font-face {
-    font-family: gilroy;
-    src: url(/Gilroy-Regular.ttf);
+  font-family: gilroy;
+  src: url(/Gilroy-Regular.ttf);
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Poppins;
+  box-sizing: border-box;
 }
-html, body {
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
 
-#main{
-    
+#main {
+  width: 100%;
+  height: 100%;
+}
+#upper {
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  /* background-color: red; */
+  padding: 0px 50px;
+}
+#left {
+  width: 60vw;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+#left h1 {
+  font-size: 85px;
+  line-height: 5.3rem;
+  font-weight: 600;
+}
+#left p {
+  font-weight: 900;
+  font-size: 19px;
+}
+#right {
+  gap: 5px;
+  width: 40vw;
+  height: 100%;
+  position: relative;
+  display: flex;
+  padding: 20px 0;
+  justify-content: flex-end;
+}
+#right p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  width: 70px;
+  height: 37px;
+  font-size: 18px;
+  border-radius: 21px;
+  background-color: black;
+}
+#right h1 {
+  background-color: white;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 142.5px;
+  position: absolute;
+  bottom: 17%;
+  right: 0%;
+  font-size: 18px;
+}
+
+#hero-photo {
+  height: 70vh;
+  width: 100%;
+}
+#hero-photo img {
+  object-fit: cover;
+  object-position: 20% 60%;
+  height: 100%;
+  width: 100%;
 }
