--- a/style.css
+++ b/style.css
@@ -6,22 +6,44 @@
 * {
   margin: 0;
   padding: 0;
+  text-decoration: none;
   font-family: Poppins;
   box-sizing: border-box;
 }
+*{
+  color: black;
+}
 html,
 body {
+  scroll-behavior: smooth;
   width: 100%;
   height: 100%;
 }
 
+#nav {
+  z-index: 1;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 30px 40px;
+}
+#nav h4 {
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  font-size: 20px;
+  margin-left: 5px;
+  border-radius: 55px;
+}
 #main {
   width: 100%;
   height: 100%;
 }
 #upper {
   width: 100%;
-  height: 30vh;
+  height: 45%;
   display: flex;
   align-items: start;
   justify-content: center;
@@ -36,13 +58,15 @@ body {
   flex-direction: column;
 }
 #left h1 {
-  font-size: 85px;
-  line-height: 5.3rem;
+  font-size: 120px;
+  line-height: 120px;
+  letter-spacing: -6px;
   font-weight: 600;
 }
 #left p {
+  margin-top: 30px;
   font-weight: 900;
-  font-size: 19px;
+  font-size: 20px;
 }
 #right {
   gap: 5px;
@@ -51,6 +75,7 @@ body {
   position: relative;
   display: flex;
   padding: 20px 0;
+  transition: all ease 2s;
   justify-content: flex-end;
 }
 #right p {
@@ -72,15 +97,15 @@ body {
   align-items: center;
   justify-content: center;
   height: 30px;
-  width: 150px;
+  width: 165px;
   position: absolute;
-  bottom: 17%;
+  bottom: 15%;
   right: 0%;
-  font-size: 20px;
+  font-size: 22px;
 }
 
 #hero-photo {
-  height: 70vh;
+  height: 80%;
   width: 100%;
 }
 #hero-photo img {
@@ -88,4 +113,125 @@ body {
   object-position: 20% 60%;
   height: 100%;
   width: 100%;
+}
+
+#about {
+  height: 45%;
+  width: 100%;
+  /* background-color: grey; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px 60px;
+}
+#about h2 {
+  /* background-color: red; */
+  width: 65%;
+  line-height: 97px;
+  font-weight: 500;
+  font-size: 90px;
+}
+#about-part2 {
+  width: 35%;
+  height: 100%;
+  border-left: 2px solid black;
+  padding: 0 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* background-color: blue; */
+}
+#about-part2 h3 {
+  font-size: 30px;
+  font-weight: 500;
+}
+#icons i {
+  background-color: black;
+  color: white;
+  padding: 7px;
+  font-size: 25px;
+  border-radius: 50px;
+  margin-left: 10px;
+  transition: all ease .5s;
+}
+#icons #instagram i:hover {
+  font-size: 30px;
+  box-shadow: 0px 0px 120px 35px rgba(255,46,210,1);
+  color: #e11d74;
+}
+#icons #twitter i:hover {
+  font-size: 30px;
+  box-shadow: 0px 0px 197px 42px rgba(46,84,255,1);
+  color: #1381e8;
+}
+#icons #dribble i:hover {
+  font-size: 30px;
+  box-shadow: 0px 0px 197px 42px rgba(255,192,46,1);
+  color: #edc70a;
+}
+
+#what {
+  width: 100%;
+  height: 50%;
+  border-top: 2px solid #000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px 60px;
+}
+#ido {
+  width: 35%;
+  height: 100%;
+  display: flex;
+  padding-right: 60px;
+  justify-content: space-between;
+  /* background-color: grey; */
+  border-right: 2px solid black;
+}
+#ido h3 {
+  font-size: 22px;
+  font-weight: 600;
+}
+#ido i {
+  font-size: 30px;
+}
+#work {
+  width: 65%;
+  padding: 0 50px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rebeccapurple; */
+}
+#work1 {
+  display: flex;
+  padding-bottom: 60px;
+  border-bottom: 1px solid black;
+}
+#work2 {
+  display: flex;
+  padding-top: 60px;
+  border-top: 1px solid #000;
+}
+.sub-work {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.sub-work p {
+  font-size: 15px;
+  color: rgb(75, 73, 73);
+}
+.sub-work h2 {
+  font-size: 47px;
+  font-weight: 500;
+}
+#sub-work1 {
+  border-right: 2px solid black;
+  padding-right: 50px;
+}
+#sub-work2 {
+  padding-left: 50px;
 }
